--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             <div class="reveal flex justify-center lg:justify-end">
                 <div class="profile-container rounded-sm glass group">
-                    <img src="C:\Users\LENOVO\OneDrive\Documents\portfolio\mi.jpeg" alt="Shibu Kumar G K" class="w-full h-full object-cover grayscale transition-all duration-700 group-hover:grayscale-0 group-hover:scale-105" onerror="this.src='https://placehold.co/800x1200/111/fff?text=SHIBU';">
+                    <img src="mi.jpeg" alt="Shibu Kumar G K" class="w-full h-full object-cover grayscale transition-all duration-700 group-hover:grayscale-0 group-hover:scale-105" onerror="this.src='https://placehold.co/800x1200/111/fff?text=SHIBU';">
                 </div>
             </div>
         </div>
@@ -298,4 +298,5 @@
         reveal();
     </script>
 </body>
+
 </html>
